--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lucide-react": "^0.474.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-toastify": "^11.0.3",
+    "sonner": "^1.7.4",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
